# -sec-pcscd-client

./: CMakeLists.txt  README.md  sec-pcscd-client.spec
conf.d/cmake/: config.cmake
conf.d/packaging/rpm/: sec-pcscd-client.spec
etc/: simple-pcsc.json  simple-scard.json
src/: CMakeLists.txt  client-pcsc.c  pcsc-config.c  pcsc-config.h  pcsc-glue.c  pcsc-glue.h
